--- a/common/app/assets/stylesheets/module/_lightbox-gallery.scss
+++ b/common/app/assets/stylesheets/module/_lightbox-gallery.scss
@@ -16,7 +16,9 @@
 .gallery--grid {
 
     .gallery__watermark,
-    .gallery__caption {
+    .gallery__caption,
+    .gallery__caption-handle,
+    .gallery__nav {
         display: none;
     }
 
