--- a/admin/app/views/admin.scala.html
+++ b/admin/app/views/admin.scala.html
@@ -11,10 +11,11 @@
         </ul>
     </div>
     <div class="row">
-        <h3>Longitudinal Analytics</h3>
+        <h3>Analytics</h3>
         <p class="muted">See Ophan for neartime data.</p>
         <ul>
-            <li><a href="@routes.AnalyticsController.render()">Pageviews</a></li>
+            <li><a href="@routes.AnalyticsController.kpis()">KPIs</a></li>
+            <li><a href="@routes.AnalyticsController.pageviews()">Pageviews</a></li>
         </ul>
     </div>
     <div class="row">
