--- a/admin/app/views/pageviews.scala.html
+++ b/admin/app/views/pageviews.scala.html
@@ -2,7 +2,7 @@
 
 @admin_main("Pageviews", env, isAuthed = true) {
 
-    <h1>Longitudinal Pageview Analytics</h1>
+    <h1>Pageview Analytics</h1>
     <p>Collected from Ophan data covering March 1, 2013 to present.</p>
 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
