--- a/common/app/assets/stylesheets/module/_footer.scss
+++ b/common/app/assets/stylesheets/module/_footer.scss
@@ -41,9 +41,9 @@
         }
     }
 
-	.hide-in-footer {
-		display: none;
-	}
+    .hide-in-footer {
+        display: none !important;
+    }
 }
 
 /* Uses an id as is used as fragment
@@ -55,7 +55,7 @@
 }
 
 .swipe-switches {
-    display: none; 
+    display: none;
 }
 
 .can-swipe .swipe-switches {
