--- a/common/app/views/fragments/trails/gallery.scala.html
+++ b/common/app/views/fragments/trails/gallery.scala.html
@@ -5,9 +5,7 @@
     @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
 
     <h@headingLevel class="trail__headline type-5">
-        @if(trail.isInPicturesSeries) {
-            <div class="trail__headline-kicker">In Pictures:</div>
-        }
+        <div class="trail__headline-kicker">Gallery:</div>
         <a href="@LinkTo{@trail.url}" data-link-name="@rowNum | text">
             @RemoveOuterParaHtml(trail.headline)
         </a>
