--- a/applications/app/views/fragments/lightboxGalleryBody.scala.html
+++ b/applications/app/views/fragments/lightboxGalleryBody.scala.html
@@ -40,7 +40,7 @@
     <a class="gallery__nav gallery__nav--next js-gallery-next"
        data-link-name="Gallery Next"
        data-is-ajax="true"
-       href="?index=@(index - 1)">
+       href="?index=@(index + 1)">
           <span class="gallery-arrow-cta">
              <i class="i i-gallery-arrow"></i>
              <span class="h">Next</span>
