--- a/common/app/assets/stylesheets/module/_overlay.scss
+++ b/common/app/assets/stylesheets/module/_overlay.scss
@@ -1,7 +1,9 @@
 .overlay {
     display: none;
-    width: 100%;
     background: #222222;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
     .is-updating {
         margin-top: $baseline * 20;
@@ -12,7 +14,6 @@
 .overlay__header {
     @include box-sizing(border-box);
     height: $baseline * 12;
-    padding: 0 $gutter;
 }
 
 .overlay__toolbar {
@@ -25,7 +26,6 @@
    ========================================================================== */
 .has-overlay {
     background-color: #222222;
-    min-height: 100%;
 
     #header,
     #preloads,
@@ -41,14 +41,18 @@
 .overlay__cta {
     height: $baseline * 12;
     padding: 0;
-    margin-right: 16px;
+    padding: 0 $gutter / 2;
     color: #FFFFFF;
     float: left;
     border: 0;
     background: transparent;
 }
 
+.overlay__cta:first-child {
+    margin-left: $gutter / 2;
+}
+
 .overlay__cta--close {
     float: right;
-    margin-right: 0;
+    margin-right: $gutter / 2;
 }
