--- a/common/app/assets/stylesheets/module/_overlay.scss
+++ b/common/app/assets/stylesheets/module/_overlay.scss
@@ -9,6 +9,10 @@
         margin-top: $baseline * 20;
         background-image: url(../images/auto-update-activity-dark.5ce9b4b5c080e5aaca38474fbdb2e906.gif);
     }
+
+    .preload-msg {
+        color: #aaaaaa;
+    }
 }
 
 .overlay__header {
