--- a/common/app/assets/stylesheets/module/_lightbox-gallery.scss
+++ b/common/app/assets/stylesheets/module/_lightbox-gallery.scss
@@ -152,10 +152,10 @@ i.gallery__watermark {
     }
 
     @media (orientation:landscape) {
-        @include box-sizing(border-box);
-        width: 100%;
         position: absolute;
+        right: 0;
         bottom: 0;
+        left: 0;
         background: rgba(34, 34, 34, 0.90);
         padding: $baseline * 3 $gutter;
     }
