--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -4,13 +4,18 @@
 
     <div class="fronts">
         <div class="list-picker">
-            <div class="list-picker__new">
-                <input placeholder="New trailblock" type="text" data-bind="value: newListName"/>
-                <span data-bind="click: createList">OK</span>
-            </div>
             <div class="list-picker__title">Trail Blocks</div>
 
-            <ul data-bind="template: {name: 'template_tree_editions', foreach: editions}"></ul>
+            <select data-bind="options: editions, optionsText: 'id', value: $root.selectedEdition, optionsCaption: 'Edition...'"></select>
+
+            <span data-bind="if: $root.selectedEdition()">
+                <select data-bind="options: $root.selectedEdition().sections, optionsText: 'id', value: $root.selectedSection, optionsCaption: 'Section...'"></select>
+
+                <span data-bind="if: $root.selectedSection()">
+                    <select data-bind="options: $root.selectedSection().blocks, optionsText: 'id', value: $root.selectedBlock, optionsCaption: 'Block...'"></select>
+                </span>
+
+            </span>
         </div>
 
         <div class="finder">
@@ -35,25 +40,6 @@
             </div>
         </div>
     </div>
-
-    <script type="text/html" id="template_tree_editions">
-        <li class="list-picker__item">
-            <span  data-bind="text: id"></span>
-            <ul data-bind="template: {name: 'template_tree_sections', foreach: sections}"></ul>
-        </li>
-    </script>
-
-    <script type="text/html" id="template_tree_sections">
-        <li class="list-picker__item">
-            <span  data-bind="text: id"></span>
-            <ul data-bind="template: {name: 'template_tree_blocks', foreach: blocks}"></ul>
-        </li>
-    </script>
-
-    <script type="text/html" id="template_tree_blocks">
-        <li class="list-picker__item" data-bind="text: id"></li>
-    </script>
-
 
     <script type="text/html" id="template_article">
         <div class="trail cf" data-bind="attr: {'data-url': id}">
