--- a/applications/app/views/fragments/lightboxGalleryBody.scala.html
+++ b/applications/app/views/fragments/lightboxGalleryBody.scala.html
@@ -16,12 +16,12 @@
                              data-width="@image.width"
                              data-height="@image.height"
                         />
-                        <span class="gallery-arrow-cta gallery-caption-handle">
+                        <span class="gallery-arrow-cta gallerycaption-handle">
                             <i class="i i-gallery-arrow"></i>
                         </span>
-                        <figcaption class="gallery-caption" itemprop="description">
-                            <p class="gallery-caption__text">@Html(image.caption.getOrElse(""))</p>
-                            <p class="gallery-caption__credit">@image.credit</p>
+                        <figcaption class="gallerycaption" itemprop="description">
+                            <p class="gallerycaption__text">@Html(image.caption.getOrElse(""))</p>
+                            <p class="gallerycaption__credit">@image.credit</p>
                         </figcaption>
                     </figure>
             </li>
