--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -35,6 +35,7 @@
 @import "module/_live-blog";
 @import "module/football/_matches";
 @import "module/sport/_summary";
+@import "module/sport/_mini-scorecard";
 @import "module/_discussion";
 @import "module/_interactive";
 @import "module/_overlay";
