--- a/sport/app/views/fragments/cricketMatchBody.scala.html
+++ b/sport/app/views/fragments/cricketMatchBody.scala.html
@@ -6,4 +6,6 @@
 
 <article class="article" role="main">
     @fragments.cricketMatchSummary(page.theMatch)
+
+    @fragments.cricketMiniScorecard(page.theMatch)
 </article>
